# rust-learing

./: .gitignore  Cargo.toml  INDEX.md  README.md
docs/: LEARNING_GUIDE.md
src/: 00_hello.rs  01_variables.rs  01_variables_and_mutability.rs  02_data_types.rs  02_types.rs  03_functions.rs  03_functions_and_scope.rs  04_control.rs  04_control_flow.rs  05_ownership.rs  05_ownership_and_borrowing.rs  06_references.rs  06_references_and_slices.rs  07_structs.rs  07_structs_and_methods.rs  08_enums.rs  08_enums_and_pattern_matching.rs  09_collections.rs  10_errors.rs  10_modules_and_packages.rs  11_error_handling.rs  11_generics.rs  12_generics.rs  12_lifetimes.rs  13_modules.rs  13_traits.rs  14_async.rs  14_lifetimes.rs  15_standard_library.rs  15_std.rs  16_async_programming.rs
src/exercises/: mod.rs
src/projects/: cli.rs  web.rs
