[package]
name = "rust-learing"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"

# 为每个学习文件定义独立的可执行文件
[[bin]]
name = "01_variables_and_mutability"
path = "src/01_variables_and_mutability.rs"

[[bin]]
name = "02_data_types"
path = "src/02_data_types.rs"

[[bin]]
name = "03_functions_and_scope"
path = "src/03_functions_and_scope.rs"

[[bin]]
name = "04_control_flow"
path = "src/04_control_flow.rs"

[[bin]]
name = "05_ownership_and_borrowing"
path = "src/05_ownership_and_borrowing.rs"

[[bin]]
name = "06_references_and_slices"
path = "src/06_references_and_slices.rs"

[[bin]]
name = "07_structs_and_methods"
path = "src/07_structs_and_methods.rs"

[[bin]]
name = "08_enums_and_pattern_matching"
path = "src/08_enums_and_pattern_matching.rs"

[[bin]]
name = "09_collections"
path = "src/09_collections.rs"

[[bin]]
name = "10_modules_and_packages"
path = "src/10_modules_and_packages.rs"

[[bin]]
name = "11_error_handling"
path = "src/11_error_handling.rs"

[[bin]]
name = "12_generics"
path = "src/12_generics.rs"

[[bin]]
name = "13_traits"
path = "src/13_traits.rs"

[[bin]]
name = "14_lifetimes"
path = "src/14_lifetimes.rs"

[[bin]]
name = "15_standard_library"
path = "src/15_standard_library.rs"

[[bin]]
name = "16_async_programming"
path = "src/16_async_programming.rs"
