[package]
name = "rust-learing"
version = "2.0.0"
edition = "2024"
authors = ["Rust学习团队"]
description = "系统性 Rust 学习项目 - 从基础到实战"
license = "MIT"
repository = "https://github.com/awsl1414/rust-learning"

[dependencies]
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3"

# 现代化 Rust 学习项目 - 二进制文件配置
# 使用 Rust 2024 Edition 最佳实践

[[bin]]
name = "hello"
path = "src/00_hello.rs"

[[bin]]
name = "variables"
path = "src/01_variables.rs"

[[bin]]
name = "types"
path = "src/02_types.rs"

[[bin]]
name = "functions"
path = "src/03_functions.rs"

[[bin]]
name = "control"
path = "src/04_control.rs"

[[bin]]
name = "ownership"
path = "src/05_ownership.rs"

[[bin]]
name = "references"
path = "src/06_references.rs"

[[bin]]
name = "structs"
path = "src/07_structs.rs"

[[bin]]
name = "enums"
path = "src/08_enums.rs"

[[bin]]
name = "collections"
path = "src/09_collections.rs"

[[bin]]
name = "errors"
path = "src/10_errors.rs"

[[bin]]
name = "generics"
path = "src/11_generics.rs"

[[bin]]
name = "lifetimes"
path = "src/12_lifetimes.rs"

[[bin]]
name = "modules"
path = "src/13_modules.rs"

[[bin]]
name = "async"
path = "src/14_async.rs"

[[bin]]
name = "std_lib"
path = "src/15_std.rs"

[[bin]]
name = "project_cli"
path = "src/projects/cli.rs"

[[bin]]
name = "project_web"
path = "src/projects/web.rs"

# 练习文件
[[bin]]
name = "exercises"
path = "src/exercises/mod.rs"
